--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "MyFirstBootstrapWebsite",
+  "name": "Eko-info website",
   "version": "1.2.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/benabraham/bs5-static-site-starter"
+    "url": "https://github.com/hankaEsha/eko-info"
   },
   "main": "index.js",
   "devDependencies": {
@@ -29,7 +29,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp develop",
     "build": "gulp build",
-    "deploy": "gulp build && surge dist --domain \"https://my-first-bootstrap-5-website.surge.sh\""
+    "deploy": "gulp build && surge dist --domain \"https://eko-info.surge.sh\""
   },
   "prettier": {
     "tabWidth": 4,
@@ -43,9 +43,9 @@
       }
     ]
   },
-  "author": "Daniel Srb",
+  "author": "Hanka Milotova",
   "license": "MIT",
-  "description": "A basic template to start a website based on Bootstrap 5",
+  "description": "A static website based on Bootstrap 5",
   "browserslist": [
     ">= 0.5%",
     "last 2 major versions",
